# RAG_AL_Protein_Design

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: agent_log.md  audit_plan.md  bugs.md  implementation_map.md  project_spec.md  sprint1_results.md  sprint2_plan.md  sprint2_results.md  sprint3_gp_results.md  workflow.md
scripts/: README.md  curate_proteingym.py  download_models.sh  plot_aggregate.py  plot_gp_vs_rf.py  plot_results.py  run_benchmark.sh  run_embed.sh  run_local.py  setup_cluster.sh  submit_benchmark.sh  submit_embed.sh  submit_gp_benchmark.sh
src/rag_al/acquisition/: README.md  base.py  diversity_ucb.py  greedy.py  random_acq.py  retrieval_ucb.py  ucb.py
src/rag_al/cli/: README.md  benchmark.py  embed.py
src/rag_al/core/: README.md  config.py  logging.py  paths.py
src/rag_al/data/: README.md  al_dataset.py  loader.py  schema.py
src/rag_al/loop/: README.md  metrics.py  runner.py
src/rag_al/representations/: README.md  base.py  mutation.py  physicochemical.py  plm.py  plm_physico.py  retrieval.py
src/rag_al/surrogates/: README.md  base.py  gp.py  random_forest.py
tests/: test_cache_paths.py  test_esm_cache.py  test_gp_surrogate.py  test_plm_physico.py  test_plm_site.py  test_result_paths.py  test_retrieval_self_neighbor.py  test_runner_batch_y.py
