[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-al"
version = "0.1.0"
description = "Retrieval-augmented active learning benchmark for protein fitness landscapes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Zach Lipel" }
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "tqdm>=4.65",
  "torch>=2.1",
  "transformers>=4.35",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "ipython",
]

[project.scripts]
rag-embed     = "rag_al.cli.embed:main"
rag-benchmark = "rag_al.cli.benchmark:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
